# sample-apps

./: LICENSE  README.md
bun/: README.md  package.json
bun/.runtime/: app.toml
conference-app/: .gitignore  .prettierignore  README.md  app.js  db.js  eslint.config.js  package.json  test-concurrency.js
conference-app/.miren/: app.toml
conference-app/public/: attendee.js  fun.css  fun.js  organizer.js  styles.css
conference-app/views/: attendee.ejs  attendees.ejs  index.ejs  organizer.ejs  schedule.ejs
db-app/: README.md  go.mod  main.go
db-app/.miren/: app.toml
demo/: README.md  index.ts  package.json  tsconfig.json
go/: Procfile  main.go
go-load/: Dockerfile  README.md  go.mod  main.go
go-load/.miren/: app.toml
irc-chat/: go.mod  main.go
irc-chat/.miren/: app.toml
mirdle/: Procfile  README.md  package-lock.json
mirdle/.miren/: app.toml
mirdle/assets/: index.html
mirdle/src/: server.js
node-npm/: package.json  server.js
node-npm/.miren/: app.toml
node-npm/.runtime/: app.toml
node-yarn/: server.js
node-yarn/.miren/: app.toml
node-yarn/.runtime/: app.toml
python-pip/: README.md  app.py  requirements.txt
python-pip/.miren/: app.toml
python-pip/.runtime/: app.toml
python-pipenv/: README.md  app.py
python-pipenv/.miren/: app.toml
python-pipenv/.runtime/: app.toml
python-poetry/: Procfile  pyproject.toml
python-poetry/.miren/: app.toml
python-poetry/.runtime/: app.toml
rails8/: Dockerfile  Gemfile
rails8/.miren/: app.toml
rails8/.runtime/: app.toml
rails8/app/views/home/: index.html.erb
rails8/app/views/layouts/: application.html.erb
rails8/app/views/pwa/: manifest.json.erb
rails8/config/: application.rb  credentials.yml.enc  deploy.yml
rust-chat/: Cargo.toml
rust-chat/.miren/: app.toml
rust-chat/src/: main.rs  nick.rs  session.rs  state.rs
rust-chat/templates/: index.html
